--- a/index.html
+++ b/index.html
@@ -141,27 +141,16 @@
             <section id="contact" class="main style3 secondary fullscreen">
                 <div class="content container">
                     <header style="padding-bottom:0px;">
-                        <h2>Contact Us</h2>
+                        <h2><a href="mailto:sales@grandemarkranch.com">Contact Us</a></h2>
                         <p>Let us know what is on your mind. Thank you!</p>
-                        <div id="hover_text_for_contact">.</div>
                     </header>
-                        <div class="container small">
-                            <div class="row flush images">
-                                <div class="4u"><a href="mailto:jackcollins1949@gmail.com" target="_top" id="jack_pic" class="image"><img src="images/jack.JPG"></a></div>
-                                <div class="4u"><a href="mailto:gmrgrassfed@gmail.com" target="_top" id="kathy_pic" class="image"><img src="images/kathy.JPG"></a></div>
-                                <div class="4u"><a href="mailto:collinsb40@gmail.com" target="_top" id="bc_pic" class="image"><img src="images/brian.JPG" /></a></div>
-                            </div>
-                        </div>
                 </div>
             </section>
             
         <!-- Footer -->
             <footer id="footer">
                 <!-- Menu -->
-                    <ul class="menu">
-                        <li>14461 Grande Mark Road Oak Run CA 96069</li>
-                        <li>209.863.8388</li>
-                        <li>530.472.1400</li>
+                    <ul class="menu">            
                         <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
                     </ul>
             </footer>
