--- a/index.html
+++ b/index.html
@@ -30,48 +30,7 @@
             <link rel="stylesheet" href="css/style-normal.css" />
         </noscript>
         <!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
-        <script>
-          $( document ).ready(function() {
-            $('#bc_pic').hover(
-              function() {
-                $(this).addClass('transition');
-                $('#hover_text_for_contact').html("Brian | Web");
-                $('#hover_text_for_contact').css("color","black");
-              },
-              function() {
-                $('#hover_text_for_contact').css("color","white");
-                $(this).removeClass('transition');
-              }
-            );
-            $('#jack_pic').hover(
-              function() {
-                $(this).addClass('transition');
-                $('#hover_text_for_contact').html("Jack | Owner");
-                $('#hover_text_for_contact').css("color","black");
-              },
-              function() {
-                $('#hover_text_for_contact').css("color","white");
-                $(this).removeClass('transition');
-              }
-            );
-            $('#kathy_pic').hover(
-              function() {
-                $(this).addClass('transition');
-                $('#hover_text_for_contact').html("Kathy | Owner");
-                $('#hover_text_for_contact').css("color","black");
-              },
-              function() {
-                $('#hover_text_for_contact').css("color","white");
-                $(this).removeClass('transition');
-              }
-            );
-          });   
-        </script>
         <style>
-        #hover_text_for_contact {
-            color: white;
-            padding: 0px;
-        }
         .transition {
             -webkit-transform: scale(1.1); 
             -moz-transform: scale(1.1);
@@ -151,7 +110,7 @@
             <footer id="footer">
                 <!-- Menu -->
                     <ul class="menu">            
-                        <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+                        <li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
                     </ul>
             </footer>
     </body>
